@@ -31,6 +31,7 @@
 #include "fimex/NcmlCDMReader.h"
 #include "fimex/NetCDF_CDMWriter.h"
 #include "fimex/Type2String.h"
+#include "fimex/XMLInputFile.h"
 #include "fimex/interpolation.h"
 
 #include "testinghelpers.h"
