@@ -16,6 +16,7 @@
     * code simplification in NetCDF_CDMWriter and Null_CDMWriter
     * use mi-programoptions
     * does not use boost any more
+    * support inline xml config (config "filename" starting with "<xml? ")
   * 2019-01-09 fimex-0.67.2
     * ignore GRIB stepType
     * fix some memory leaks when using xmlTextReader
